--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "test": "mocha"
+    "test": "mocha --exit"
   },
   "dependencies": {
     "chai": "^4.1.2",
@@ -18,11 +18,12 @@
     "koa-route": "^2.4.2",
     "koa-static": "^2.0.0",
     "lodash": "^4.17.4",
+    "mocha": "^4.0.1",
     "swig": "^1.3.2",
     "three": "^0.87.1"
   },
   "devDependencies": {
     "supertest": "^0.12.1",
-    "mocha": "^2.4.5"
+    "mocha": "^4.0.1"
   }
 }
