--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "koa-route": "^2.4.2",
     "koa-static": "^2.0.0",
     "lodash": "^4.17.4",
-    "mocha": "^4.0.1",
     "swig": "^1.3.2",
     "three": "^0.87.1"
   },
   "devDependencies": {
+    "csv": "^2.0.0",
     "supertest": "^0.12.1",
     "mocha": "^4.0.1"
   }
